# weak_static

./: Cargo.toml
src/: lib.rs
