[package]
name = "weak_static"
version = "0.1.1"
authors = ["panicbit <panicbit.dev@gmail.com>"]
license = "MIT/Apache-2.0"

description = "A macro for declaring lazy droppable statics."
documentation = "https://docs.rs/weak_static"

repository = "https://github.com/panicbit/weak_static"
keywords = ["static", "lazy", "drop", "shared", "arc"]

[dev-dependencies]
lazy_static = "0.2.8"
